Complete Index Graphs

--- a/pdfMaker/src/result.html
+++ b/pdfMaker/src/result.html
@@ -105,7 +105,7 @@
             <footer>
                 <div class="inner">
                     <section id="mainDesc">
-                        본 분석은 서울대학교 AI개발 공식 자회사인 SNUilab 과
+                        본 분석은 서울대학교 AI개발 공식 자회사인 SNUailab 과
                         공동 연구 설계한 AI질병예측 프로그램입니다. 방대한
                         데이터를 학습한 인공지능이 고객님의 건강검진 결과를
                         기반으로 암질환과 만성질환에 대한 발병 위험도를 분석하여
